--- a/index (3).html
+++ b/index (3).html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bunga Fanda florist</title>
+	<title>Jurnalistik spentiba</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
-		<a href="#" class="logo">Flower<span>.</span></a>
+		<a href="#" class="logo">Jurnalistik Spentiba<span>.</span></a>
 		<div class="menuToggle" onclick="toggleMenu()"></div>
 		<ul class="navigation">
 			<li><a href="#home" onclick="toggleMenu()">Home</a></li>
@@ -20,11 +20,11 @@
 	</header>
 	<section class="banner" id="banner">
 		<div class="content">
-			<h2>Selamat Datang Di Bunga Fanda Florist</h2>
+			<h2>Selamat Datang Di Jurnalistik Spentiba</h2>
 			<p>
 			        Tempat terbaik untuk menemukan bunga segar dan bibit yang bagus. Kami berkomitmen untuk menyediakan bunga dan bibit berkualitas tinggi dan layanan terbaik bagi Anda. Jelajahi koleksi kami dan temukan bunga yang sempurna untuk momen spesial Anda. Terima kasih telah mengunjungi website kami.
 			</p>
-			<a href="#" class="btn">Bunga dan Bibit</a>
+			<a href="#https://forms.gle/cTTNpkmpa7kMMWKh8" class="btn">Register Now</a>
 		</div>
 	</section>
 
@@ -38,20 +38,13 @@
 					
 				</p>
 			</div>
-
-			<div class="col50">
-				<div class="imgBx">
-					<img src="./img1.jpg" alt="">
-				</div>
-			</div>
-		</div>
 	</section>
 
 	<section class="menu" id="menu">
 		<div class="title">
-			<h2 class="titleText">Bunga dan<span>B</span>ibit</h2>
+			<h2 class="titleText">Jurnalistik<span>S</span>pentiba</h2>
 			<p>
-			  flowers and fruit seeds and so on   
+			  Event yang di adakan   
 		    </p>
 		</div>
 
@@ -88,16 +81,13 @@
 					<h3>bibit buah mangga</h3>
 				</div>
 			</div>
-		<div>	
-			<a href="#" class="btn">View All</a>
-		</div>
 	</section>
 
 	<section class="testimonials" id="testimonials">
 		<div class="title white">
 			<h2 class="titleText">The <span>T</span>estimonials</h2>
 			<p>
-				Ini testimonials costomer kita
+				Ini testimonials dari teman-temam jurnalisti
 			</p>
 		</div>
 			<div class="box">
