--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
 			<p>
 			        Tempat terbaik untuk menemukan bunga segar dan bibit yang bagus. Kami berkomitmen untuk menyediakan bunga dan bibit berkualitas tinggi dan layanan terbaik bagi Anda. Jelajahi koleksi kami dan temukan bunga yang sempurna untuk momen spesial Anda. Terima kasih telah mengunjungi website kami.
 			</p>
-			<li><a href="https://forms.gle/cTTNpkmpa7kMMWKh8" target="_blank">Register Now</a>
-		</div>
+	   <ul class="tabs">
+                 <li>
+                    <a href="#survey-tab">Take the Survey!</a>
+                </li>
+          </ul>
+
+        <div class="tab-content">
+           <div id="survey-tab">
+         <a href="https://forms.gle/cTTNpkmpa7kMMWKh8" target="_blank">Take the Survey!</a>
+       </div>
+  </div>
 	</section>
 
 	<section class="about" id="about">
